--- a/chc_verifier/src/Makefile
+++ b/chc_verifier/src/Makefile
@@ -1,14 +1,5 @@
 .PHONY: clear
 
-OBJS =  boogie_io.o \
-	decision_tree.o \
-        horn_constraint.o \
-        output_visitor.o \
-       	pretty_print_visitor.o \
-        horn_solver.o \
-        datapoint.o \
-        job.o 
-
 CPPFLAGS += -I ../include
 CPPFLAGS += -I ../../hice-dt/include
 CPPFLAGS += -I ../../z3-4.7.1/src/api
@@ -26,12 +17,9 @@ endif
 
 all: chc_verifier
 
-chc_verifier: $(OBJS)
-	$(CXX) $(CPPFLAGS) $(LDFLAGS) $(OMPFLAGS) -o chc_verifier chc_verifier.cpp $(OBJS) ../../z3-4.7.1/build/z3.a
+chc_verifier:
+	$(CXX) $(CPPFLAGS) $(LDFLAGS) $(OMPFLAGS) -o chc_verifier chc_verifier.cpp ../../hice-dt/build/libhice-dt.a ../../z3-4.7.1/build/z3.a
 
-%.o: %.cpp
-	$(CXX) $(CPPFLAGS) -c $< -o $@
-   
 clean:
 	rm -f *.o
 	rm -f *.exe
